Input config + Main character classes

--- a/ProjectHero.uproject
+++ b/ProjectHero.uproject
@@ -7,7 +7,10 @@
 		{
 			"Name": "ProjectHero",
 			"Type": "Runtime",
-			"LoadingPhase": "Default"
+			"LoadingPhase": "Default",
+			"AdditionalDependencies": [
+				"Engine"
+			]
 		}
 	]
 }
