Basic attack tracking

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -15,6 +15,7 @@ PreferredLandscapeOrientation=LandscapeLeft
 [/Script/EngineSettings.GameMapsSettings]
 EditorStartupMap=/Game/Maps/PlayMap.PlayMap
 GameDefaultMap=/Game/Maps/PlayMap.PlayMap
+GlobalDefaultGameMode=/Script/ProjectHero.PHGame
 
 [/Script/Engine.PhysicsSettings]
 DefaultGravityZ=-980.000000
