Main menu added, pause menu added with button P (or escape if standalone game window)

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -12,10 +12,23 @@ bSupportsUpsideDownOrientation=False
 bSupportsLandscapeLeftOrientation=True
 PreferredLandscapeOrientation=LandscapeLeft
 
+[/Script/Engine.UserInterfaceSettings]
+UIScaleRule=Horizontal
+
 [/Script/EngineSettings.GameMapsSettings]
 EditorStartupMap=/Game/Maps/PlayMap.PlayMap
-GameDefaultMap=/Game/Maps/PlayMap.PlayMap
+LocalMapOptions=
+TransitionMap=None
+bUseSplitscreen=True
+TwoPlayerSplitscreenLayout=Horizontal
+ThreePlayerSplitscreenLayout=FavorTop
+FourPlayerSplitscreenLayout=Grid
+bOffsetPlayerGamepadIds=False
+GameInstanceClass=/Script/Engine.GameInstance
+GameDefaultMap=/Game/Maps/MainMenu.MainMenu
+ServerDefaultMap=/Engine/Maps/Entry.Entry
 GlobalDefaultGameMode=/Script/ProjectHero.PHGame
+GlobalDefaultServerGameMode=None
 
 [/Script/Engine.PhysicsSettings]
 DefaultGravityZ=-980.000000
