--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -14,6 +14,7 @@ PreferredLandscapeOrientation=LandscapeLeft
 
 [/Script/Engine.UserInterfaceSettings]
 UIScaleRule=Horizontal
+RenderFocusRule=Never
 
 [/Script/EngineSettings.GameMapsSettings]
 EditorStartupMap=/Game/Maps/PlayMap.PlayMap
