--- a/ProjectHero.uproject
+++ b/ProjectHero.uproject
@@ -1,6 +1,6 @@
 {
 	"FileVersion": 3,
-	"EngineAssociation": "4.21",
+	"EngineAssociation": "{261F699A-4A14-4011-9B9C-8D9A394581A7}",
 	"Category": "",
 	"Description": "",
 	"Modules": [
