--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -17,7 +17,7 @@ UIScaleRule=Horizontal
 RenderFocusRule=Never
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Maps/PlayMap.PlayMap
+EditorStartupMap=/Game/Maps/GameplayTest.GameplayTest
 LocalMapOptions=
 TransitionMap=None
 bUseSplitscreen=True
@@ -30,6 +30,9 @@ GameDefaultMap=/Game/Maps/MainMenu.MainMenu
 ServerDefaultMap=/Engine/Maps/Entry.Entry
 GlobalDefaultGameMode=/Script/ProjectHero.PHGame
 GlobalDefaultServerGameMode=None
+
+[/Script/Engine.RendererSettings]
+r.DefaultFeature.AutoExposure=False
 
 [/Script/Engine.PhysicsSettings]
 DefaultGravityZ=-980.000000
@@ -75,7 +78,3 @@ AsyncSceneSmoothingFactor=0.990000
 InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
 DefaultBroadphaseSettings=(bUseMBPOnClient=False,bUseMBPOnServer=False,MBPBounds=(Min=(X=0.000000,Y=0.000000,Z=0.000000),Max=(X=0.000000,Y=0.000000,Z=0.000000),IsValid=0),MBPNumSubdivs=2)
-
-[/Script/Engine.RendererSettings]
-r.DefaultFeature.AutoExposure=False
-
