--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -17,7 +17,7 @@ UIScaleRule=Horizontal
 RenderFocusRule=Never
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Maps/GameplayTest.GameplayTest
+EditorStartupMap=/Game/Maps/DemoLevel.DemoLevel
 LocalMapOptions=
 TransitionMap=None
 bUseSplitscreen=True
@@ -26,7 +26,7 @@ ThreePlayerSplitscreenLayout=FavorTop
 FourPlayerSplitscreenLayout=Grid
 bOffsetPlayerGamepadIds=False
 GameInstanceClass=/Script/Engine.GameInstance
-GameDefaultMap=/Game/Maps/MainMenu.MainMenu
+GameDefaultMap=/Game/Maps/DemoLevel.DemoLevel
 ServerDefaultMap=/Engine/Maps/Entry.Entry
 GlobalDefaultGameMode=/Script/ProjectHero.PHGame
 GlobalDefaultServerGameMode=None
