Mapa de build y menu cargandolo

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -26,7 +26,7 @@ ThreePlayerSplitscreenLayout=FavorTop
 FourPlayerSplitscreenLayout=Grid
 bOffsetPlayerGamepadIds=False
 GameInstanceClass=/Script/Engine.GameInstance
-GameDefaultMap=/Game/Maps/DemoLevel.DemoLevel
+GameDefaultMap=/Game/Maps/MainMenu.MainMenu
 ServerDefaultMap=/Engine/Maps/Entry.Entry
 GlobalDefaultGameMode=/Script/ProjectHero.PHGame
 GlobalDefaultServerGameMode=None
