--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -17,7 +17,7 @@ UIScaleRule=Horizontal
 RenderFocusRule=Never
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Maps/DemoLevel.DemoLevel
+EditorStartupMap=/Game/Maps/LowPolyTest1.LowPolyTest1
 LocalMapOptions=
 TransitionMap=None
 bUseSplitscreen=True
