Guardado/Carga de estados + mapa pruebas

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -17,7 +17,7 @@ UIScaleRule=Horizontal
 RenderFocusRule=Never
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Maps/LowPolyTest1.LowPolyTest1
+EditorStartupMap=/Game/Maps/LowPolyLauren.LowPolyLauren
 LocalMapOptions=
 TransitionMap=None
 bUseSplitscreen=True
@@ -28,7 +28,7 @@ bOffsetPlayerGamepadIds=False
 GameInstanceClass=/Script/Engine.GameInstance
 GameDefaultMap=/Game/Maps/MainMenu.MainMenu
 ServerDefaultMap=/Engine/Maps/Entry.Entry
-GlobalDefaultGameMode=/Script/ProjectHero.PHGame
+GlobalDefaultGameMode=/Game/Blueprints/PHGameBP.PHGameBP_C
 GlobalDefaultServerGameMode=None
 
 [/Script/Engine.RendererSettings]
