sistema de spawn + logica de material de limite

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -17,7 +17,7 @@ UIScaleRule=Horizontal
 RenderFocusRule=Never
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Maps/LowPolyLauren.LowPolyLauren
+EditorStartupMap=/Game/Maps/NewCity.NewCity
 LocalMapOptions=
 TransitionMap=None
 bUseSplitscreen=True
@@ -26,7 +26,7 @@ ThreePlayerSplitscreenLayout=FavorTop
 FourPlayerSplitscreenLayout=Grid
 bOffsetPlayerGamepadIds=False
 GameInstanceClass=/Script/Engine.GameInstance
-GameDefaultMap=/Game/Maps/MainMenu.MainMenu
+GameDefaultMap=/Game/Maps/NewCity.NewCity
 ServerDefaultMap=/Engine/Maps/Entry.Entry
 GlobalDefaultGameMode=/Game/Blueprints/PHGameBP.PHGameBP_C
 GlobalDefaultServerGameMode=None
@@ -79,5 +79,4 @@ SyncSceneSmoothingFactor=0.000000
 InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
 DefaultBroadphaseSettings=(bUseMBPOnClient=False,bUseMBPOnServer=False,MBPBounds=(Min=(X=0.000000,Y=0.000000,Z=0.000000),Max=(X=0.000000,Y=0.000000,Z=0.000000),IsValid=0),MBPNumSubdivs=2)
-
 
